# fn

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  Pipfile  README.md  conanfile.txt  pyproject.toml
.github/workflows/: macos.yml  poetry.yml  ubuntu.yml  windows.yml
benchmarks/: CMakeLists.txt  conanfile.txt
benchmarks/free_functions/: CMakeLists.txt  benchmark.cpp  direct.benchmark.cpp  fn.benchmark.cpp  functions.cpp  functions.hpp
benchmarks/helpers/: helper.hpp  sample_classes.hpp
cmake/: FindConan.cmake  FindConda.cmake  FindPoetry.cmake  build_options.cmake  dependencies.cmake  pipenv.cmake  poetry.cmake  use_conan.cmake  use_poetry.cmake  utilities.cmake
data/conan/: x86_64.conf
examples/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  main.cpp
src/fn/: fn.hpp
src/river/: fn.hpp
tests/: CMakeLists.txt  common.hpp  conanfile.py  conanfile.txt  free_functions.cpp  free_functions.test.cpp  invocable_objects.test.cpp  lambda.test.cpp  main.cpp  member_functions.cpp  member_functions.test.cpp  sml_integration.cpp  sml_integration.test.cpp  traits.test.cpp
tools/: CMakeLists.txt
tools/memfun_gen/: CMakeLists.txt  conanfile.txt  mem_fn_sig.hpp  memfn_gen.cpp  memfn_sig.hpp
